eks-argocd/brooklyn/service-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: substrate-brooklyn-nlb
  namespace: substrate-brooklyn
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: eipalloc-00acb54a7f562d5e5
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-0c6aa2d940cf7b217
    service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: preserve_client_ip.enabled=true
spec:
  type: LoadBalancer
  ports:
    - name: p2p
      protocol: TCP
      port: 30333
      targetPort: 30333
    - name: websocket
      protocol: TCP
      port: 9944
      targetPort: 9944
    - name: rpc
      protocol: TCP
      port: 9933
      targetPort: 9933
  selector:
    app: substrate-brooklyn
