eks-argocd/brooklyn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: substrate-brooklyn
  namespace: substrate-brooklyn
spec:
  ports:
    - name: p2p
      protocol: TCP
      port: 30333
      targetPort: 30333
    - name: websocket
      protocol: TCP
      port: 9944
      targetPort: 9944
    - name: rpc
      protocol: TCP
      port: 9933
      targetPort: 9933
  selector:
    app: substrate-brooklyn
